--- a/字符串处理/index.css
+++ b/字符串处理/index.css
@@ -1,3 +1,4 @@
+/* 公共样式 */
 * {
     margin: 0;
     padding: 0;
@@ -11,6 +12,8 @@ body {
     width: 100vw;
     height: 100vh;
 }
+
+/* 自定义 input、button 样式 */
 
 button,
 input {
@@ -45,6 +48,33 @@ input {
     color: #dcdfe6;
 }
 
+/* 具体内容样式 */
+
+.tab-container {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    border-radius: 10px;
+    width: 600px;
+    height: 500px;
+}
+
+/* 切换栏设置 */
+nav {
+    position: relative;
+    display: flex;
+    height: 40px;
+    background-color: #fbfafa;
+    line-height: 40px;
+    text-align: center;
+}
+
+nav label {
+    flex: 1;
+    cursor: pointer;
+    transition: all 600ms;
+}
+
 .active-bar {
     position: absolute;
     bottom: 0;
@@ -56,30 +86,8 @@ input {
     transform: translateX(-50%);
 }
 
-.result-item .gen-result {
-    padding-top: 30px;
-}
-
-.result-item {
-    background: #eee;
-    padding-top: 70px;
-    padding-left: 40px;
-}
-
-.string-analyzer-container {
-    width: 500px;
-    height: 500px;
-}
-
-.tab-container {
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    border-radius: 10px;
-    width: 500px;
-    height: 500px;
-}
-
+/* 切换栏的 active bar 移动距离设置 */
+/* TODO：这里的移动计算 left 换成 transform 来计算 */
 .tab-container input:nth-child(1):checked ~ nav .active-bar {
     left: calc(100% / 6);
     background: #4f8bee;
@@ -95,6 +103,20 @@ input {
     background: #4f8bee;
 }
 
+/* 切换栏对应内容设置 */
+main {
+    flex: 1;
+}
+
+main section {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 300%;
+    height: 100%;
+    transition: all 600ms;
+}
+
+/* 对应内容的移动距离设置 */
 .tab-container input:nth-child(1):checked ~ main section {
     transform: translate3d(0, 0, 0);
 }
@@ -107,34 +129,62 @@ input {
     transform: translate3d(-66.67%, 0, 0);
 }
 
-nav {
-    position: relative;
-    display: flex;
-    height: 40px;
-    background-color: #f0f0f0;
-    line-height: 40px;
-    text-align: center;
-}
-
-nav label {
-    flex: 1;
-    cursor: pointer;
-    transition: all 300ms;
-}
-
-main {
-    flex: 1;
-}
-
-main section {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 300%;
-    height: 100%;
-    transition: all 300ms;
-}
-
 section > div {
     flex: 1;
+    padding-top: 70px;
+    padding-left: 40px;
+    background: #eee;
 }
 
+section > div > .gen-result {
+    padding-top: 30px;
+}
+
+section > div:nth-child(1) > button {
+    margin-left: 0;
+}
+
+.kmp-wild-container {
+    padding-top: 40px;
+}
+
+.kmp-wild-container > div:nth-child(1) {
+    display: inline-block;
+}
+
+.kmp-wild-container > div:nth-child(3) {
+    margin-top: 20px;
+}
+
+.input-desc {
+    display: inline-block;
+    width: 70px;
+}
+
+.loading {
+    position: relative;
+    background: rgba(133, 199, 251, .8);
+}
+
+.loading::before {
+    position: absolute;
+    top: calc(50% - 12px);
+    left: calc(50% - 12px);
+    content: "";
+    border: 3px solid #fff;
+    border-bottom: 3px solid transparent;
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    transform: translate(-50%, -50%);
+    animation: loading-rotate linear 1s infinite;
+}
+
+@keyframes loading-rotate {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(1turn);
+    }
+}
